force-app/main/default/objects/SmartIntake_Option__mdt/SmartIntake_Option__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake Option</label>
    <pluralLabel>SmartIntake Options</pluralLabel>
</CustomObject>