force-app/main/default/objects/SmartIntake_Option__mdt/fields/Option_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_Label__c</fullName>
    <label>Option Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>