force-app/main/default/objects/SmartIntake_Option__mdt/fields/Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_Value__c</fullName>
    <label>Option Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>